# TrustFlow

./: README.md  docker-compose.yml  nginx.conf
backend/: .dockerignore  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 20260202_0001_001_initial_schema_initial_schema.py  20260210_2029_002_agreement_id_to_hex.py  20260212_1335_003_remove_pending_funding_enum.py  20260214_1130_004_add_oauth_fields_to_user_and_session_table.py  20260220_0404_005_relax_disputes_constraints.py
backend/src/: __init__.py  config.py  main.py
backend/src/modules/: __init__.py
backend/src/modules/agreements/: README.md  __init__.py  module.py
backend/src/modules/agreements/__tests__/: __init__.py  test_agreement_schemas.py  test_agreement_service.py
backend/src/modules/agreements/core/: __init__.py
backend/src/modules/agreements/http/: __init__.py  exceptions_handler.py  router.py
backend/src/modules/agreements/persistence/: __init__.py  agreement_repository.py
backend/src/modules/agreements/schemas/: __init__.py  agreement_schemas.py
backend/src/modules/auth/: README.md  module.py
backend/src/modules/blockchain/: README.md  __init__.py
backend/src/modules/disputes/: README.md  __init__.py  module.py
backend/src/modules/users/: README.md  __init__.py  module.py
backend/src/shared/: __init__.py
backend/src/shared/database/: enums.py  session.py
backend/tests/: .env.test
backend/tests/integration/blockchain/: README.md  __init__.py  interact.py  setup_users.py  verify_worker.py
(+82 files in other folders)
